--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
   <div class="aaa">
     <img src="./eisenhower-matrix.jpg">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">
+    <a class="more_inf"
+       href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?
     </a>
   </div>
@@ -19,7 +20,9 @@
     <p id="topSectionForAddingElementToList">
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text">
+        <input class="task" 
+               id="new-task"
+               type="text">
         <button>Add</button>
       </div>
     </p>
@@ -39,7 +42,9 @@
       <li class="editMode">
         <input type="checkbox">
         <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
+        <input class="task"
+               type="text"
+               value="Go Shopping">
         <button class="edit">Save</button>
         <button class="delete">
           <img src="./remove.svg">
@@ -53,7 +58,8 @@
       <li>
         <input type="checkbox" checked>
         <label class="task">See the Doctor</label>
-        <input type="text" class="task">
+        <input type="text" 
+               class="task">
         <button class="edit">Edit</button>
         <button class="delete">
           <img src="./remove.svg">
