--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
+    <p id="box-add-elements">
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input class="task" 
@@ -29,7 +29,7 @@
 
     <h3>Todo</h3>
 
-    <ul id="incompleteTasks">
+    <ul id="in-complete-tasks">
       <li>
         <input type="checkbox">
         <label class="task">Pay Bills</label>
@@ -39,12 +39,12 @@
           <img src="./remove.svg">
         </button>
       </li>
-      <li class="editMode">
+      <li class="edit-mode">
         <input type="checkbox">
         <label class="task">Go Shopping</label>
         <input class="task"
                type="text"
-               value="Go Shopping">
+               value="go shopping">
         <button class="edit">Save</button>
         <button class="delete">
           <img src="./remove.svg">
