refactor: formatting according to rule 3.2 in html-and-css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div class="aaa">
+  <div class="preview">
     <img src="./eisenhower-matrix.jpg">
     <a class="more-inf"
        href="https://goal-life.com/page/method/matrix-eisenhower">
@@ -16,7 +16,7 @@
     </a>
   </div>
 
-  <div class="centered-main-page-element">
+  <div class="main">
     <p id="box-add-elements">
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
