--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class="main">
-    <p id="box-add-elements">
+    <p id="add-elements">
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input class="task" 
@@ -29,7 +29,7 @@
 
     <h3>Todo</h3>
 
-    <ul id="in-complete-tasks">
+    <ul id="todo">
       <li>
         <input type="checkbox">
         <label class="task">Pay Bills</label>
