--- a/index.html
+++ b/index.html
@@ -8,64 +8,60 @@
 </head>
 
 <body>
-  <div class="preview">
-    <img src="./eisenhower-matrix.jpg">
-    <a class="more-inf"
-       href="https://goal-life.com/page/method/matrix-eisenhower">
-      Want more details?
-    </a>
-  </div>
+  <div class="page">
+    <div class="preview">
+      <img src="./eisenhower-matrix.jpg">
+      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">
+        Want more details?
+      </a>
+    </div>
 
-  <div class="main">
-    <p id="add-elements">
-      <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
-        <input class="task" 
-               id="new-task"
-               type="text">
-        <button>Add</button>
-      </div>
-    </p>
+    <div class="main">
+      <p id="add-elements">
+        <label for="new-task">Add Item</label>
+        <div class="task-row-wrapper">
+          <input class="task" id="new-task" type="text">
+          <button>Add</button>
+        </div>
+      </p>
 
-    <h3>Todo</h3>
+      <h3>Todo</h3>
 
-    <ul id="todo">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
-        </button>
-      </li>
-      <li class="edit-mode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input class="task"
-               type="text"
-               value="go shopping">
-        <button class="edit">Save</button>
-        <button class="delete">
-          <img src="./remove.svg">
-        </button>
-      </li>
-    </ul>
+      <ul id="todo">
+        <li>
+          <input type="checkbox">
+          <label class="task">Pay Bills</label>
+          <input type="text">
+          <button class="edit">Edit</button>
+          <button class="delete">
+            <img src="./remove.svg">
+          </button>
+        </li>
+        <li class="edit-mode">
+          <input type="checkbox">
+          <label class="task">Go Shopping</label>
+          <input class="task" type="text" value="go shopping">
+          <button class="edit">Save</button>
+          <button class="delete">
+            <img src="./remove.svg">
+          </button>
+        </li>
+      </ul>
 
-    <h3>Completed</h3>
+      <h3>Completed</h3>
 
-    <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" 
-               class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
-        </button>
-      </li>
-    </ul>
+      <ul id="completed-tasks">
+        <li>
+          <input type="checkbox" checked>
+          <label class="task">See the Doctor</label>
+          <input type="text" class="task">
+          <button class="edit">Edit</button>
+          <button class="delete">
+            <img src="./remove.svg">
+          </button>
+        </li>
+      </ul>
+    </div>
   </div>
   <script src="app.js"></script>
 </body>
