--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <li class="edit-mode">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
-          <input class="task" type="text" value="go shopping">
+          <input class="task" type="text" value="Go Shopping">
           <button class="edit">Save</button>
           <button class="delete">
             <img src="./remove.svg">
