--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="page">
 
     <div class="preview">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="the eisenhower matrix">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?
       </a>
@@ -38,7 +38,7 @@
           <input type="text">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="delete icon">
           </button>
         </li>
 
@@ -48,7 +48,7 @@
           <input class="task" type="text" value="Go Shopping">
           <button class="edit">Save</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="delete icon">
           </button>
         </li>
 
@@ -64,7 +64,7 @@
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="delete icon">
           </button>
         </li>
 
