refactor: formatting according to rule 2.1 (BEM) in html-and-css-and-js

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <section>
 
           <div id="add-elements">
-            <label for="new-task">Add Item</label>
-            <div class="task-row-wrapper">
-              <input class="task" id="new-task" type="text">
+            <label for="new-main__task">Add Item</label>
+            <div class="main__task-row-wrapper">
+              <input class="main__task" id="new-main__task" type="text">
               <button>Add</button>
             </div>
           </div>
@@ -46,21 +46,21 @@
 
             <li>
               <input type="checkbox">
-              <label class="task">Pay Bills</label>
+              <label class="main__task">Pay Bills</label>
               <input type="text">
-              <button class="edit">Edit</button>
-              <button class="delete">
-                <img src="./remove.svg" alt="delete icon">
+              <button class="main__edit">Edit</button>
+              <button class="main__delete">
+                <img src="./remove.svg" alt="main__delete icon">
               </button>
             </li>
 
-            <li class="edit-mode">
+            <li class="main__edit-mode">
               <input type="checkbox">
-              <label class="task">Go Shopping</label>
-              <input class="task" type="text" value="Go Shopping">
-              <button class="edit">Save</button>
-              <button class="delete">
-                <img src="./remove.svg" alt="delete icon">
+              <label class="main__task">Go Shopping</label>
+              <input class="main__task" type="text" value="Go Shopping">
+              <button class="main__edit">Save</button>
+              <button class="main__delete">
+                <img src="./remove.svg" alt="main__delete icon">
               </button>
             </li>
 
@@ -76,11 +76,11 @@
 
             <li>
               <input type="checkbox" checked>
-              <label class="task">See the Doctor</label>
-              <input class="task" type="text">
-              <button class="edit">Edit</button>
-              <button class="delete">
-                <img src="./remove.svg" alt="delete icon">
+              <label class="main__task">See the Doctor</label>
+              <input class="main__task" type="text">
+              <button class="main__edit">Edit</button>
+              <button class="main__delete">
+                <img src="./remove.svg" alt="main__delete icon">
               </button>
             </li>
 
