refactor: formatting according to rule 2.1 (BEM) in html-and-css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <div class="preview">
         <img src="./eisenhower-matrix.jpg" alt="the eisenhower matrix">
-        <a href="https://goal-life.com/page/method/matrix-eisenhower" class="more-inf">
+        <a href="https://goal-life.com/page/method/matrix-eisenhower" class="preview__more-inf">
           Want more details?
         </a>
       </div>
